Failures in some WPT reftests for font-variant-emoji
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox139 | --- | fixed |
People
(Reporter: jfkthame, Assigned: jfkthame)
References
Details
Attachments
(2 files)
We're currently failing css/css-fonts/font-variant-emoji-003.html because our heuristics for selecting between color-emoji and monochrome fonts don't entirely match the test expectations.
[Also showing a failure on wpt.fyi for font-variant-emoji-004.html, but that's just an issue of line height/alignment; the expected glyphs are showing up, but one line of the text is vertically shifted slightly. This is probably a result of inconsistencies in font metrics between the various fonts present, such that line-height (or ascent/descent) computes differently, and we should make the test more robust to eliminate this.]
| Assignee | ||
Comment 1•1 year ago
|
||
The existing tests are tweaked to make them more reliable:
(a) Explicit height/line-height is added to avoid spurious discrepances
caused by normal line-height depending on the browser's default fonts.
(b) Variation selectors are added to the reference cases where a glyph
is to be rendered with a different style than its default presentation;
without this, browsers may choose a default font with the "preferred"
presentation over the specified webfont in the reference. With this fix,
the reference files render consistently across Chrome/Firefox/Safari.
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
No change in behavior, just a global rename of the type.
Comment 5•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/222e4b7b3b74
https://hg.mozilla.org/mozilla-central/rev/607af81ae4a2
Updated•1 year ago
|
Description
•