Bug 1955672 - Improve the interaction between font-variant-emoji and Unicode emoji properties during font selection. r=layout-reviewers,emilio,dshin

The existing tests are tweaked to make them more reliable:

(a) Explicit height/line-height is added to avoid spurious discrepances
caused by normal line-height depending on the browser's default fonts.

(b) Variation selectors are added to the reference cases where a glyph
is to be rendered with a different style than its default presentation;
without this, browsers may choose a default font with the "preferred"
presentation over the specified webfont in the reference. With this fix,
the reference files render consistently across Chrome/Firefox/Safari.

Differential Revision: https://phabricator.services.mozilla.com/D243109